2007-12-04  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtknotebook.c: Modify the tab-label-destroy fix to not
	crash epiphany.

2007-12-03  Richard Hult  <richard@imendio.com>

	* gtk/gtkquartz.c: (_gtk_quartz_set_selection_data_for_pasteboard):
	Don't crash when dragging from a source that doesn't support uri
	lists (bug #499868, Paul Davis).

2007-12-03  Richard Hult  <richard@imendio.com>

	* gdk/quartz/gdkwindow-quartz.c:
	(gdk_window_impl_quartz_begin_paint_region): Don't crash when a
	parent relative bg pixmap is set, and no parent has a bg
	pixmap. Fixes bug #500804.

2007-12-03  Matthias Clasen  <mclasen@redhat.com>

	Two optimizations for icon cache lookups.

	* gtk/gtkiconcache.[hc]:
	* gtk/gtkicontheme.c: Remember the directory index for
	subdirectories, instead of running over the directory list
	again and again.

	* gtk/gtkiconcache.c (find_image_offset): Remember the last 
	chain and try it first; this helps with the the usage patterns
	in gtkicontheme.c, where the same icon is queried for a lot
	of subdirectories.

2007-12-03 15:18:17  Tim Janik  <timj@imendio.com>

	* gtk/Makefile.am (gtktypefuncs.c): use 'grep -o' to extract _get_type
	functions from header files. this should be portable across linux and
	Mac OS, unlike the previpous sed expression.

2007-12-1  Cody Russell  <bratsche@gnome.org>

	* gtk/gtkpaned.c: (gtk_paned_set_position) [Win32]:
	On Windows, queue a redraw of child2 whenever we set
	the pane handle position.  This is unfortunately kind
	of hacky, but solves the visual artifacts that were
	occuring on at least certain types of child widgets
	(e.g., text views and tree views) that are inside
	horizontal or vertical panes. (#144269)

2007-11-30  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkrc.c: Fix doc typos.  (#500672, David Lambert)

2007-11-29  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkmenuitem.c (gtk_menu_item_paint): Remove leftover
	debug spew.

2007-11-29  Matthias Clasen  <mclasen@redhat.com>
